# autolab-pluginskeleton

./: CMakeLists.txt  README
src/: CMakeLists.txt
